調整咪牌按鈕區域RWD

--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -412,8 +412,14 @@ img {
   background-color: black;
 }
 
+.watchCard-modal {
+  overflow: visible !important;
+}
+
 .watchCard-box {
-  top: 50%;
+  max-width: 500px;
+  height: 300px;
+  top: 33%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%) !important;
           transform: translate(-50%, -50%) !important;
@@ -422,16 +428,19 @@ img {
 .watchCard-box .modal-content {
   width: 500px;
   height: 281px;
+  border: 5px solid #644d31;
+  -webkit-box-shadow: 0px 0px 10px yellow;
+          box-shadow: 0px 0px 10px yellow;
 }
 
 .watchCard-box .close {
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background-color: white;
+  background-color: #644d31;
   opacity: 1;
-  right: 0%;
-  top: -3%;
+  left: -3%;
+  top: -8%;
 }
 
 .input-emoji {
@@ -2053,10 +2062,26 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
 }
 
+@media screen and (max-width: 1545px) {
+  .bettingArea-btn-gitbackAllCoin, .bettingArea-btn-check {
+    width: 70px;
+  }
+  .bettingArea-btn-reward {
+    width: 40px;
+  }
+}
+
 @media screen and (max-width: 1280px) {
   .text-md-left,
   .text-md-right {
     font-size: smaller;
+  }
+  .watchCard-box {
+    top: 50%;
+  }
+  .watchCard-box .modal-content {
+    width: 300px;
+    height: 168px;
   }
   .card-container {
     margin-top: -20px;
@@ -2075,6 +2100,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   .betArea-item {
     font-size: 1.5rem;
+  }
+  .bettingArea-btn-gitbackAllCoin, .bettingArea-btn-check {
+    width: 55px;
   }
   .gameHistory {
     height: 25%;
@@ -2511,9 +2539,6 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .coinArea {
     height: 9%;
   }
-  .bettingArea-btn-reward {
-    width: 25px;
-  }
 }
 
 @media screen and (min-width: 1025px) {
@@ -2637,6 +2662,13 @@ a.btn.disabled, fieldset[disabled] a.btn {
     width: 100%;
     height: 575px;
   }
+  .watchCard-box {
+    top: 35%;
+  }
+  .watchCard-box .modal-content {
+    width: 500px;
+    height: 281px;
+  }
   .mainGame {
     width: 100%;
   }
@@ -2656,6 +2688,12 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   .betArea-mobile-container {
     height: 250px;
+  }
+  .bettingArea-btn-gitbackAllCoin, .bettingArea-btn-check {
+    width: 100px;
+  }
+  .bettingArea-btn-reward {
+    width: 60px;
   }
   .coin-100 {
     width: 126.4px;
@@ -3123,6 +3161,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   .video-box {
     height: 430px;
+  }
+  .watchCard-box {
+    top: 50%;
   }
   .lightBox {
     display: block;
@@ -4111,7 +4152,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
     bottom: 0%;
   }
   .bettingArea-btn-reward {
-    width: 25px;
+    width: 40px;
   }
   .header-userName {
     font-size: 0.5rem;
@@ -4152,8 +4193,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .navbar-toggler {
     padding: 0;
   }
-  .bettingArea-btn-gitbackAllCoin,
-  .bettingArea-btn-check {
+  .bettingArea-btn-gitbackAllCoin, .bettingArea-btn-check {
     width: 55px;
   }
   .bettingArea-btn-betInfo {
@@ -4226,6 +4266,20 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .betArea-item {
     font-size: 0.5rem;
     font-weight: bolder;
+  }
+  .bettingArea-btn-reward {
+    width: 35px;
+  }
+  .bettingArea-btn-gitbackAllCoin, .bettingArea-btn-check {
+    width: 40px;
+    font-size: 12px;
+  }
+  .watchCard-box {
+    top: 60%;
+  }
+  .watchCard-box .modal-content {
+    width: 300px;
+    height: 168px;
   }
   .table-total-betStatus {
     font-size: 0.3rem;
@@ -4425,10 +4479,6 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .chat-input input {
     width: 120px;
   }
-  .watchCard-box .modal-content {
-    width: 300px;
-    height: 168px;
-  }
 }
 
 @media screen and (max-width: 320px) {
@@ -4477,6 +4527,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .video-box {
     height: 180px;
   }
+  .watchCard-box {
+    top: 70%;
+  }
   .gameHistory {
     height: 100px;
   }
@@ -4489,10 +4542,15 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .betArea {
     height: 230px;
   }
-  .bettingArea-btn-gitbackAllCoin,
-  .bettingArea-btn-check {
-    width: 40px;
+  .bettingArea-btn-gitbackAllCoin, .bettingArea-btn-check {
+    width: 30px;
     font-size: 10px;
+  }
+  .bettingArea-btn-gitbackAllCoin .bi, .bettingArea-btn-check .bi {
+    display: none;
+  }
+  .bettingArea-btn-reward {
+    width: 25px;
   }
   .bettingArea-btn {
     height: 50px;
