--- a/src/assets/css/scss/components/_watchCardBox.scss
+++ b/src/assets/css/scss/components/_watchCardBox.scss
@@ -1,19 +1,26 @@
+.watchCard-modal{
+    overflow: visible !important;
+}
 .watchCard-box{
     //rwd的時候置中
-    top:50%;
+    max-width:500px;
+    height:300px;
+    top:33%;
     left:50%;
     transform: translate(-50%,-50%) !important;
     .modal-content{
         width:500px;
         height:281px;
+        border:5px solid $mainColor;
+        box-shadow: 0px 0px 10px yellow;
     }
     .close{
         width:30px;
         height:30px;
         border-radius: 50%;
-        background-color: white;
+        background-color: $mainColor;
         opacity: 1;
-        right:0%;
-        top:-3%;
+        left:-3%;
+        top:-8%;
     }
 }
