--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -28,7 +28,7 @@
   .bettingArea-btn-gitbackAllCoin, .bettingArea-btn-check {
     width: 70px;
   }
-  .bettingArea-btn-reward {
+  .bettingArea-btn-reward , .bettingArea-btn-watchCard {
     width: 40px;
   } 
 }
@@ -460,7 +460,7 @@
   .bettingArea-btn-gitbackAllCoin, .bettingArea-btn-check {
     width: 100px;
   }
-  .bettingArea-btn-reward {
+  .bettingArea-btn-reward ,.bettingArea-btn-watchCard {
     width: 60px;
   } 
   .coin-100 {
@@ -1110,7 +1110,7 @@
       font-size: 0.5rem;
     }
   }
-  .bettingArea-btn-reward{
+  .bettingArea-btn-reward , .bettingArea-btn-watchCard{
     width:50px;
   }
   .betLimitInfo{
@@ -1431,7 +1431,7 @@
   .betArea-item-bottom {
     bottom: 0%;
   }
-  .bettingArea-btn-reward{
+  .bettingArea-btn-reward , .bettingArea-btn-watchCard{
     width:40px;
   }
   .header-userName {
@@ -1546,7 +1546,7 @@
     font-size: 0.5rem;
     font-weight: bolder;
   }
-  .bettingArea-btn-reward{
+  .bettingArea-btn-reward , .bettingArea-btn-watchCard{
     width:35px;
   }
   .bettingArea-btn-gitbackAllCoin, .bettingArea-btn-check {
@@ -1755,7 +1755,7 @@
       display: none;
     }
   }
-  .bettingArea-btn-reward {
+  .bettingArea-btn-reward , .bettingArea-btn-watchCard {
     width: 25px;
 }
   .bettingArea-btn {
@@ -1944,7 +1944,7 @@
       display: none;
     }
   }
-  .bettingArea-btn-reward {
+  .bettingArea-btn-reward , .bettingArea-btn-watchCard {
     width: 20px;
 }
   .coin-100 {
