使用script setup寫法、優化圖片檔案大小

--- a/src/assets/css/scss/base/_variable.scss
+++ b/src/assets/css/scss/base/_variable.scss
@@ -13,9 +13,8 @@ $body-bg-img:url('../../images/body-bg.png');
 $loading-img:url('../../images/loading.svg');
 $videoLoading-img:url('../../images/videoLoading.svg');
 //coin序列圖
-$coin-spriteImg:url('../../images/coin.png');
+$coin-spriteImg:url('../../images/coin.webp');
 //路圖序列圖
 $historyRoad-spriteImg:url('../../images/road-sprite.png');
 //卡牌序列圖
-$poker-spriteImg:url('../../images/poker.png')
-
+$poker-spriteImg:url('../../images/poker.webp')
