--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -10,7 +10,7 @@
 }
 
 .coin-preLoad, .coin-100, .coin-100:hover, .coin-100-current, .coin-100-disable, .coin-500, .coin-500:hover, .coin-500-current, .coin-500-disable, .coin-1000, .coin-1000:hover, .coin-1000-current, .coin-1000-disable, .coin-2000, .coin-2000:hover, .coin-2000-current, .coin-2000-disable, .coin-5000, .coin-5000:hover, .coin-5000-current, .coin-5000-disable, .coin-10000, .coin-10000:hover, .coin-10000-current, .coin-10000-disable, .coin-20000, .coin-20000:hover, .coin-20000-current, .coin-20000-disable, .coin-100000, .coin-100000:hover, .coin-100000-current, .coin-100000-disable, .coin-200000, .coin-200000:hover, .coin-200000-current, .coin-200000-disable {
-  background-image: url("../../images/coin.png");
+  background-image: url("../../images/coin.webp");
   cursor: pointer;
 }
 
@@ -1991,7 +1991,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
 }
 
 .poker {
-  background-image: url("../../images/poker.png");
+  background-image: url("../../images/poker.webp");
 }
 
 .card-item-w {
@@ -2947,9 +2947,6 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .gameHistory {
     width: 100%;
     height: 220px;
-    background-image: url(../../images/cardroad_bg_20.png);
-    background-repeat: repeat;
-    background-position: left top;
   }
   .tabsArea {
     display: none;
