串接歷史紀錄API

--- a/src/assets/css/scss/components/_userBetInfo.scss
+++ b/src/assets/css/scss/components/_userBetInfo.scss
@@ -4,6 +4,9 @@
 }
 .userBetInfo-content{
     width: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .userBetInfo-footer{
     justify-content: center;
