--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -1107,13 +1107,17 @@ a.btn.disabled, fieldset[disabled] a.btn {
   background-color: rgba(128, 0, 128, 0.829);
 }
 
-.bettingArea-btn-watchCard {
+.bettingArea-btn-center {
   width: 70px;
   height: 42px;
   border-radius: 5px;
   cursor: pointer;
   font-size: 1.5rem;
   background: #504e4e;
+}
+
+.fly-card {
+  background-color: #644d31 !important;
 }
 
 .bettingArea-btn-watchCard-Animation {
@@ -1303,7 +1307,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
 }
 
-#betConfirm, #cancleBet {
+#betConfirm, #cancleBet, #flyCard {
   opacity: 0;
 }
 
@@ -2157,7 +2161,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .bettingArea-btn-gitbackAllCoin, .bettingArea-btn-check {
     width: 70px;
   }
-  .bettingArea-btn-reward, .bettingArea-btn-watchCard {
+  .bettingArea-btn-reward, .bettingArea-btn-center {
     width: 40px;
   }
 }
@@ -2781,9 +2785,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
     height: 250px;
   }
   .bettingArea-btn-gitbackAllCoin, .bettingArea-btn-check {
-    width: 100px;
+    width: 70px;
   }
-  .bettingArea-btn-reward, .bettingArea-btn-watchCard {
+  .bettingArea-btn-reward, .bettingArea-btn-center {
     width: 60px;
   }
   .coin-100 {
@@ -3752,7 +3756,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .askRoad-player p, .askRoad-banker p {
     font-size: 0.5rem;
   }
-  .bettingArea-btn-reward, .bettingArea-btn-watchCard {
+  .bettingArea-btn-reward, .bettingArea-btn-center {
     width: 50px;
   }
   .betLimitInfo {
@@ -4245,8 +4249,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .betArea-item-bottom {
     bottom: 0%;
   }
-  .bettingArea-btn-reward, .bettingArea-btn-watchCard {
-    width: 40px;
+  .bettingArea-btn-reward, .bettingArea-btn-center {
+    width: 30px;
+    font-size: 1rem;
   }
   .header-userName {
     font-size: 0.5rem;
@@ -4361,8 +4366,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
     font-size: 0.5rem;
     font-weight: bolder;
   }
-  .bettingArea-btn-reward, .bettingArea-btn-watchCard {
-    width: 35px;
+  .bettingArea-btn-reward, .bettingArea-btn-center {
+    width: 25px;
+    font-size: 0.5rem;
   }
   .bettingArea-btn-gitbackAllCoin, .bettingArea-btn-check {
     width: 40px;
@@ -4646,8 +4652,8 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .bettingArea-btn-gitbackAllCoin .bi, .bettingArea-btn-check .bi {
     display: none;
   }
-  .bettingArea-btn-reward, .bettingArea-btn-watchCard {
-    width: 25px;
+  .bettingArea-btn-reward, .bettingArea-btn-center {
+    width: 20px;
   }
   .bettingArea-btn {
     height: 50px;
@@ -4877,7 +4883,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .bettingArea-btn-check .bi, .bettingArea-btn-gitbackAllCoin .bi {
     display: none;
   }
-  .bettingArea-btn-reward, .bettingArea-btn-watchCard {
+  .bettingArea-btn-reward, .bettingArea-btn-center {
     width: 20px;
   }
   .coin-100 {
