修改咪牌畫面為有遊戲結果時才關閉

--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -1117,7 +1117,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
 }
 
 .fly-card {
-  background-color: #644d31 !important;
+  background-color: #644d31;
 }
 
 .bettingArea-btn-watchCard-Animation {
