--- a/src/assets/css/scss/components/_bettingArea.scss
+++ b/src/assets/css/scss/components/_bettingArea.scss
@@ -73,7 +73,7 @@
         background: rgb(80, 78, 78);
     }
     .fly-card{
-        background-color: #644d31 !important;
+        background-color: #644d31;
     }
     .bettingArea-btn-watchCard-Animation {
         animation-name: watchCardAnimation;
