--- a/src/assets/css/scss/components/_bettingArea.scss
+++ b/src/assets/css/scss/components/_bettingArea.scss
@@ -75,6 +75,9 @@
     .fly-card{
         background-color: #644d31;
     }
+    #watchCard-btn{
+        background-color: rgba(128, 0, 128, 0.829);
+    }
     .bettingArea-btn-watchCard-Animation {
         animation-name: watchCardAnimation;
         animation-duration: 2s;
