新增歷史注單卡牌的莊閒字樣

--- a/src/assets/css/scss/util/_util.scss
+++ b/src/assets/css/scss/util/_util.scss
@@ -69,6 +69,9 @@
 .cursor-point{
     cursor: pointer;
 }
+.fs-larger{
+    font-size: larger;
+}
 %hisRoad{
     cursor: pointer;
     background-image:$historyRoad-spriteImg;
