--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -4,6 +4,10 @@
   cursor: pointer;
 }
 
+.fs-larger {
+  font-size: larger;
+}
+
 .roadImg-preLoad, .BeadPlate-B, .BeadPlate-B-BPair, .BeadPlate-B-PPair, .BeadPlate-B-BothPair, .BeadPlate-P, .BeadPlate-P-BPair, .BeadPlate-P-PPair, .BeadPlate-P-BothPair, .BeadPlate-T, .BeadPlate-T-BPair, .BeadPlate-T-PPair, .BeadPlate-T-BothPair, .big-B, .big-B-BPair, .big-B-PPair, .big-B-BothPair, .big-BT, .big-BT-BPair, .big-BT-PPair, .big-BT-BothPair, .big-P, .big-P-BPair, .big-P-PPair, .big-P-BothPair, .big-PT, .big-PT-BPair, .big-PT-PPair, .big-PT-BothPair, .small-red, .small-blue, .bigEye-red, .bigEye-blue, .cockroach-red, .cockroach-blue, .small-red-ask, .small-blue-ask, .bigEye-red-ask, .bigEye-blue-ask, .cockroach-red-ask, .cockroach-blue-ask {
   cursor: pointer;
   background-image: url("../../images/road-sprite.png");
