--- a/src/assets/css/scss/layout/_header.scss
+++ b/src/assets/css/scss/layout/_header.scss
@@ -9,8 +9,9 @@
 	width: 100%;
 }
 .table-btn-list::-webkit-scrollbar { width: 0 !important;height:0 !important }  //隱藏滾動條
-.header-userName{
+.header-item{
 	cursor: pointer;
+	margin-right: 10px;
 }
 .header-top{
 	width:100%;
