--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -2787,6 +2787,16 @@ a.btn.disabled, fieldset[disabled] a.btn {
     border: 2px solid #262626;
     width: 100%;
   }
+  .betArea-item4 {
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+  }
+  .betArea-item2 {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
   .betArea-pc {
     display: none;
   }
@@ -4209,6 +4219,11 @@ a.btn.disabled, fieldset[disabled] a.btn {
 @media screen and (max-width: 460px) {
   .table-btn-list {
     max-width: 255px;
+  }
+  .betArea-item2 {
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
   }
 }
 
