--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -447,6 +447,12 @@
     border: 2px solid #262626;
     width: 100%;
   }
+  .betArea-item4{
+    order:0,
+  }
+  .betArea-item2{
+    order:2,
+  }
   .betArea-pc {
     display: none;
   }
@@ -1377,6 +1383,9 @@
 @media screen and (max-width: 460px){
   .table-btn-list {
     max-width: 255px;
+  }
+  .betArea-item2{
+    order:0,
   }
 }
 @media screen and (max-width: 414px) {
