--- a/src/assets/css/scss/layout/_mainGame.scss
+++ b/src/assets/css/scss/layout/_mainGame.scss
@@ -58,7 +58,10 @@
 	display: block;
 }
 .betArea-mobile{
-	display: none;
+	// display: none;
+	display: flex;
+	flex-wrap: wrap;
+	height:79%;
 }
 
 //選單區
