--- a/src/assets/css/scss/layout/_mainGame.scss
+++ b/src/assets/css/scss/layout/_mainGame.scss
@@ -52,12 +52,7 @@
 	border-right-style: solid;
 	border-right-color: #FFF;
 }
-.betArea-pc{
-	float: left;
-	width: 100%;
-	display: block;
-}
-.betArea-mobile{
+.betArea-wrap{
 	// display: none;
 	display: flex;
 	flex-wrap: wrap;
